--- a/force-app/main/default/lwc/form/form.html
+++ b/force-app/main/default/lwc/form/form.html
@@ -1,5 +1,12 @@
 <template>
-    <lightning-input type = "text" label="Name:"></lightning-input>
-    <lightning-input type = "number" label="Phone No:"></lightning-input>
-    <lightning-input type = "checkbox-button" label="Active:"></lightning-input>
+    <lightning-card title="Student Form">
+        <div class = "Dynamic-greeting">Hello {dynamicGreeting}</div>
+        <lightning-input type = "text" label="Name:" onchange = {greetingChangeHandler}></lightning-input>
+        <lightning-input type = "number" label="Roll no:" maxlength=3></lightning-input>
+        <lightning-input type = "email" label = "Email ID"></lightning-input>
+        <lightning-input type = "tel" label="Phone No:" maxlength=10></lightning-input>
+        <lightning-input type="date" label="Birthday"> </lightning-input>
+        <lightning-input type = "color" label="Favorite Colour"></lightning-input>
+        <lightning-input type="file" label="Attachment"></lightning-input>
+    </lightning-card>
 </template>
