--- a/force-app/main/default/lwc/form/form.html
+++ b/force-app/main/default/lwc/form/form.html
@@ -8,5 +8,6 @@
         <lightning-input type="date" label="Birthday"> </lightning-input>
         <lightning-input type = "color" label="Favorite Colour"></lightning-input>
         <lightning-input type="file" label="Attachment"></lightning-input>
+        <lightning-button type ="submit" label ="Submit"></lightning-button>
     </lightning-card>
 </template>
