--- a/force-app/main/default/lwc/form/form.html
+++ b/force-app/main/default/lwc/form/form.html
@@ -1,4 +1,6 @@
 <template>
+    <lightning-
+<template if:true={displayDiv}>
     <lightning-card title="Student Form">
         <div>Hello {dynamicGreeting}</div>
         <lightning-input type = "text" label="Name:" onchange = {greetingChangeHandler}></lightning-input>
@@ -9,6 +11,7 @@
         <lightning-input type = "color" label="Favorite Colour"></lightning-input>
         <lightning-input type="Checkbox" label="Active"></lightning-input>
         <lightning-input type="file" label="Attachment"></lightning-input>
-        <lightning-button type ="submit" label ="Submit"></lightning-button>
+        <lightning-button type ="submit" label ="Submit" onclick= {saveClick}></lightning-button>
     </lightning-card>
+</template>
 </template>
