--- a/force-app/main/default/lwc/accountManagerLDS/accountManagerLDS.html
+++ b/force-app/main/default/lwc/accountManagerLDS/accountManagerLDS.html
@@ -10,6 +10,19 @@
                     <lightning-button label="Create Account" onclick={createAccount}></lightning-button>
                 </lightning-card>
             </lightning-layout-item>
+            <lightning-layout-item size="6" padding="around-small">
+                <lightning-card title="View Created Account">
+                    <p>
+                        <lightning-formatted-text value={retAccountName}></lightning-formatted-text>
+                    </p>
+                    <p>
+                        <lightning-formatted-phone value={retAccountPhone}></lightning-formatted-phone>
+                    </p>
+                    <p>
+                        <lightning-formatted-url value={retAccountWebsite}></lightning-formatted-url>
+                    </p>
+                </lightning-card>
+            </lightning-layout-item>
         </lightning-layout>
     </lightning-card>
     
