--- a/force-app/main/default/lwc/accountManageApex/accountManageApex.html
+++ b/force-app/main/default/lwc/accountManageApex/accountManageApex.html
@@ -1,8 +1,12 @@
 <template>
     <lightning-card title="All Accounts">
+        <lightning-input type="number" label="Number Of Accounts" onchange={numberOfAccountChangeHandler} ></lightning-input>
+        <p>
+            <lightning-button label="Get Accounts" onclick={getAccounts} ></lightning-button>
+        </p>
         <ul>
             <template if:true={responseReceived}>
-                <template for:each={accounts.data} for:item="account">
+                <template for:each={accounts} for:item="account">
                     <li key={account.Id}>
                         <div class="slds-p-around_medium lgc-bg">
                             <lightning-tile label={account.Name} type="media">
